--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="videos-container">
             <video src="video1.mp4" controls></video>
             <video src="video2.mp4" controls></video>
-            <video src="video3.mp4" controls</video>
+            <video src="video3.mp4" controls></video>
           </div>
     </article>
 
